Fix logo/title alignment at expanded tablet breakpoint

--- a/app/assets/stylesheets/trestle/components/_sidebar.scss
+++ b/app/assets/stylesheets/trestle/components/_sidebar.scss
@@ -178,6 +178,7 @@
 
         .navbar-brand {
           padding: 10px 15px;
+          justify-content: flex-start;
 
           img {
             margin: 0 10px 0 0;
